# xmp_editing

./: .gitignore  .pre-commit-config.yaml  README.md  check_xmp.py  extract_xmp.py  generate_crop_xmp.py  histograms.py  img_view.sql  pyproject.toml  update_xmp_dates.py  xmp_editing_utils.py
tags/: crs_tags.txt  tags_from_darktable.txt
