[tool.poetry]
name = "xmp_editing"
version = "0.0.0"
description = "xmp_editing"
authors = ["Jason Krizan <34923517+orthorhombic@users.noreply.github.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
seaborn = "^0.12.1"
numpy = "^1.23.4"
slpp = { git = "https://github.com/SirAnthony/slpp" }
logzero = "^1.7.0"
pyexiv2 = "^2.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.990"
flake8 = "^5.0.4"
black = "22.10.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.9.0"
pyupgrade = "^3.2.0"
poetryup = "^0.12.3"
bandit = "1.7.4"
jupyter = "^1.0.0"
ipykernel = "^6.17.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.7"
autopep8 = "^2.0.0"
pre-commit = "^2.20.0"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.autopep8]
max_line_length = 88
select = ""
ignore = ["E203", "E501"]
in-place = true
recursive = true
aggressive = 3

[tool.autoflake]
check = false
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
